--- a/js-fork/package.json
+++ b/js-fork/package.json
@@ -6,7 +6,7 @@
     "silero-vad-cli": "cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "author": "",
   "license": "ISC",
