add bench script, preflight check for file existence, and don't visualize by default

--- a/js-fork/package.json
+++ b/js-fork/package.json
@@ -6,6 +6,7 @@
     "silero-vad-cli": "cli.js"
   },
   "scripts": {
+    "bench": "node bench.js",
     "test": "node --test"
   },
   "author": "",
