--- a/js-fork/package.json
+++ b/js-fork/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jjhbw/silero-vad.git"
+    "url": "git+https://github.com/jjhbw/silero-vad.git"
   },
   "bugs": {
     "url": "https://github.com/jjhbw/silero-vad/issues"
